JEP 514: Ahead-of-Time Command-Line Ergonomics JEP 515: Ahead-of-Time Method Profiling